examples/invalid_provider_harness/unknown_provider.argx
module invalid.provider
harness H { provider Missing mode dry_run network denied secrets denied filesystem none }
